fix: ticket navbar z-index

--- a/components/Landing/LandingOverlay/overlay.module.scss
+++ b/components/Landing/LandingOverlay/overlay.module.scss
@@ -6,13 +6,13 @@
     z-index: -1;
     pointer-events: none;
 
-    .navcontainer{
-        position: absolute;
-        right: -16%;
-        top: 45%;
-        transform: translateY(-50%);
-        z-index: 5000;
-    }
+    // .navcontainer{
+    //     position: absolute;
+    //     right: -16%;
+    //     top: 45%;
+    //     transform: translateY(-50%);
+    //     z-index: 5000;
+    // }
 
     .headerContainer {
         position: absolute;
